<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#fff7c3"
        android:elevation="20dp"
        android:layout_marginBottom="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/dialogHeading"
                    android:id="@+id/ListFromTO"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:id="@+id/dialogImage"
                            android:contentDescription="@string/ListImageDesc" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/ListMainID"
                            android:id="@+id/dialogID"
                            android:background="#f1518c"
                            android:gravity="center_horizontal"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:elevation="5dp"
                            android:hint="@string/dialog" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="0dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/ListMEssagTitle"
                            android:id="@+id/textView3"
                            android:textStyle="bold" />

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="90dp">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/dialogMessage"
                                android:layout_marginRight="20dp"
                                android:layout_marginBottom="5dp"
                                android:elevation="0dp"
                                android:inputType="textMultiLine"
                                android:backgroundTint="@color/colorAccent"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/dialogSEND"
                                android:id="@+id/dialogSend"
                                android:textStyle="bold"
                                android:layout_marginLeft="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_marginRight="30dp" />

                        </TableRow>
                    </LinearLayout>

                </LinearLayout>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/my_keys"
                        android:id="@+id/textView33"
                        android:textStyle="bold|italic"
                        android:layout_marginLeft="40dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/toKey"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold|italic" />
                </TableRow>

            </LinearLayout>
        </TableRow>

    </LinearLayout>
</LinearLayout>